[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/choice_menu/choice_menu.gd" type="Script" id=2]
[ext_resource path="res://ui/party_menu/party_menu.gd" type="Script" id=3]
[ext_resource path="res://ui/cursor.png" type="Texture" id=4]
[ext_resource path="res://ui/party_menu/party_select_menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://battle/familiars/mimic.png" type="Texture" id=6]
[ext_resource path="res://ui/item_menu/item_menu.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/frame.png" type="Texture" id=8]

[node name="party_menu" type="ColorRect"]
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choice_menu" type="NinePatchRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 8 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choices" type="Control" parent="choice_menu"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="col_1" type="Control" parent="choice_menu/choices"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choice_1" type="Label" parent="choice_menu/choices/col_1"]
margin_left = 32.0
margin_top = 16.0
margin_right = 128.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "SPHYNX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="choice_menu/choices/col_1/choice_1"]
margin_left = 104.0
margin_right = 184.0
margin_bottom = 16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "LVL 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="choice_menu/choices/col_1/choice_1"]
margin_top = 16.0
margin_right = 272.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "HP:20/20 MP:10/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choice_2" type="Label" parent="choice_menu/choices/col_1"]
margin_left = 32.0
margin_top = 56.0
margin_right = 128.0
margin_bottom = 72.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "SPHYNX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="choice_menu/choices/col_1/choice_2"]
margin_left = 104.0
margin_right = 184.0
margin_bottom = 16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "LVL 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="choice_menu/choices/col_1/choice_2"]
margin_top = 16.0
margin_right = 272.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "HP:20/20 MP:10/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choice_3" type="Label" parent="choice_menu/choices/col_1"]
margin_left = 32.0
margin_top = 96.0
margin_right = 128.0
margin_bottom = 112.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "SPHYNX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="choice_menu/choices/col_1/choice_3"]
margin_left = 104.0
margin_right = 184.0
margin_bottom = 16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "LVL 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="choice_menu/choices/col_1/choice_3"]
margin_top = 16.0
margin_right = 272.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "HP:20/20 MP:10/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choice_4" type="Label" parent="choice_menu/choices/col_1"]
margin_left = 32.0
margin_top = 136.0
margin_right = 128.0
margin_bottom = 152.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "SPHYNX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="choice_menu/choices/col_1/choice_4"]
margin_left = 104.0
margin_right = 184.0
margin_bottom = 16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "LVL 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="choice_menu/choices/col_1/choice_4"]
margin_top = 16.0
margin_right = 272.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "HP:20/20 MP:10/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choice_5" type="Label" parent="choice_menu/choices/col_1"]
margin_left = 32.0
margin_top = 176.0
margin_right = 128.0
margin_bottom = 192.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "SPHYNX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="choice_menu/choices/col_1/choice_5"]
margin_left = 104.0
margin_right = 184.0
margin_bottom = 16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "LVL 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="choice_menu/choices/col_1/choice_5"]
margin_top = 16.0
margin_right = 272.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "HP:20/20 MP:10/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choice_6" type="Label" parent="choice_menu/choices/col_1"]
margin_left = 32.0
margin_top = 216.0
margin_right = 128.0
margin_bottom = 232.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "SPHYNX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="choice_menu/choices/col_1/choice_6"]
margin_left = 104.0
margin_right = 184.0
margin_bottom = 16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "LVL 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="choice_menu/choices/col_1/choice_6"]
margin_top = 16.0
margin_right = 272.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "HP:20/20 MP:10/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cursor" type="Sprite" parent="choice_menu"]
position = Vector2( 6, 5 )
texture = ExtResource( 4 )
offset = Vector2( 2.5, 3.5 )

[node name="select_menu" parent="." instance=ExtResource( 5 )]
visible = false

[node name="summary" type="NinePatchRect" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 8 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="name" type="Label" parent="summary"]
margin_left = 24.0
margin_top = 16.0
margin_right = 120.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "SPHYNX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="summary"]
margin_left = 144.0
margin_top = 16.0
margin_right = 224.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "LVL 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="type" type="Label" parent="summary"]
margin_left = 24.0
margin_top = 32.0
margin_right = 104.0
margin_bottom = 48.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "FIRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="summary"]
margin_left = 24.0
margin_top = 72.0
margin_right = 152.0
margin_bottom = 88.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "HP 20/20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mana" type="Label" parent="summary"]
margin_left = 24.0
margin_top = 88.0
margin_right = 152.0
margin_bottom = 104.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "MP 10/=10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack" type="Label" parent="summary"]
margin_left = 24.0
margin_top = 128.0
margin_right = 168.0
margin_bottom = 144.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "ATTACK 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="defense" type="Label" parent="summary"]
margin_left = 24.0
margin_top = 144.0
margin_right = 184.0
margin_bottom = 160.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "DEFENSE 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speed" type="Label" parent="summary"]
margin_left = 24.0
margin_top = 160.0
margin_right = 152.0
margin_bottom = 176.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "SPEED 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_1" type="Label" parent="summary"]
margin_left = 24.0
margin_top = 192.0
margin_right = 216.0
margin_bottom = 208.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "EMBER / FIRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="details" type="Label" parent="summary/move_1"]
margin_top = 16.0
margin_right = 272.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "POWER 60 COST 5MP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_2" type="Label" parent="summary"]
margin_left = 336.0
margin_top = 192.0
margin_right = 528.0
margin_bottom = 208.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "EMBER / FIRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="details" type="Label" parent="summary/move_2"]
margin_top = 16.0
margin_right = 272.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "POWER 60 COST 5MP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_3" type="Label" parent="summary"]
margin_left = 24.0
margin_top = 232.0
margin_right = 216.0
margin_bottom = 248.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "EMBER / FIRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="details" type="Label" parent="summary/move_3"]
margin_top = 16.0
margin_right = 272.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "POWER 60 COST 5MP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_4" type="Label" parent="summary"]
margin_left = 336.0
margin_top = 232.0
margin_right = 528.0
margin_bottom = 248.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "EMBER / FIRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="details" type="Label" parent="summary/move_4"]
margin_top = 16.0
margin_right = 272.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "POWER 60 COST 5MP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite" type="Sprite" parent="summary"]
position = Vector2( 424, 88 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="switch_cursor" type="Sprite" parent="."]
texture = ExtResource( 4 )
offset = Vector2( 2.5, 3.5 )

[node name="item_menu" parent="." instance=ExtResource( 7 )]
visible = false
